tests/allowedCapabilities/allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: capabilities-allowed
  labels:
    owner: me.agilebank.demo
spec:
  initContainers:
    - name: initnginx
      image: nginx
      securityContext:
        capabilities:
          add: ["something"]

  containers:
    - name: nginx
      image: nginx
      securityContext:
        capabilities:
          add: ["something"]
