tests/allowedCapabilities/disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: capabilities-disallowed
  labels:
    owner: me.agilebank.demo
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        capabilities:
          add: ["disallowedcapability"]
